; ModuleID = '/home/carl/AnghaBench/lab/engine/code/game/extr_g_syscalls.c_trap_GeneticParentsAndChildSelection.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/game/extr_g_syscalls.c_trap_GeneticParentsAndChildSelection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BOTLIB_AI_GENETIC_PARENTS_AND_CHILD_SELECTION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @trap_GeneticParentsAndChildSelection(i32 %0, float* %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca float*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store i32 %0, i32* %6, align 4
  store float* %1, float** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %11 = load i32, i32* @BOTLIB_AI_GENETIC_PARENTS_AND_CHILD_SELECTION, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load float*, float** %7, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = load i32*, i32** %9, align 8
  %16 = load i32*, i32** %10, align 8
  %17 = call i32 @syscall(i32 %11, i32 %12, float* %13, i32* %14, i32* %15, i32* %16)
  ret i32 %17
}

declare dso_local i32 @syscall(i32, i32, float*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
